# mono

./: .gitignore  .gitmodules  Makefile.am  Makefile.am.coverage  configure.ac  crappyjunk.cs  interface-defaults.cs  interface-defaults.il  regions0.cs  regions1.cs  regions10.cs  regions11.cs  regions12.cs  regions2.cs  regions3.cs  regions4.cs  regions5.cs  regions6.cs  regions7.cs  regions8.cs  regions9.cs
eglib/src/: glib.h
libgc/: alloc.c  mark.c
libgc/include/private/: gc_pmark.h  gc_priv.h
m4/: gcov.m4
mcs/class/I18N/Common/: ByteEncoding.cs  MonoEncoding.cs
mcs/class/I18N/MidEast/: CP1254.cs  CP1255.cs  CP1256.cs  CP28596.cs  CP28598.cs  CP28599.cs  CP38598.cs
mcs/class/I18N/Other/: CP1251.cs  CP1257.cs  CP1258.cs  CP20866.cs  CP21866.cs  CP28594.cs  CP28595.cs  CP874.cs
mcs/class/I18N/Rare/: CP1026.cs  CP1047.cs  CP1140.cs  CP1141.cs  CP1142.cs  CP1143.cs  CP1144.cs  CP1145.cs  CP1146.cs  CP1147.cs  CP1148.cs  CP1149.cs  CP20273.cs  CP20277.cs  CP20278.cs  CP20280.cs  CP20284.cs  CP20285.cs  CP20290.cs  CP20297.cs  CP20420.cs  CP20424.cs  CP20871.cs  CP21025.cs  CP37.cs  CP500.cs  CP708.cs  CP852.cs  CP855.cs  CP857.cs  CP858.cs  CP862.cs  CP864.cs  CP866.cs  CP869.cs  CP870.cs  CP875.cs
mcs/class/I18N/West/: CP10000.cs  CP10079.cs  CP1250.cs  CP1252.cs  CP1253.cs  CP28592.cs  CP28593.cs  CP28597.cs  CP28605.cs  CP437.cs  CP850.cs  CP860.cs  CP861.cs  CP863.cs  CP865.cs
mcs/class/I18N/tools/: ucm2cp  ucm2cp.c
mcs/class/System/System.Net/: MacProxy.cs
mcs/class/corlib/: corlib.dll.sources
mcs/class/corlib/ReferenceSources/: String.cs  StringBuilder.cs  TextInfo.cs
mcs/class/corlib/System/: AppDomainSetup.cs  Array.cs  String.cs
mcs/class/corlib/System.Globalization/: TextInfo.cs
mcs/class/corlib/System.IO/: MonoFileType.cs  MonoIO.cs  MonoIOError.cs  MonoIOStat.cs  Path.cs
mcs/class/corlib/System.Reflection/: Assembly.cs  Module.cs
mcs/class/corlib/System.Runtime.InteropServices/: Marshal.cs
mcs/class/corlib/System.Runtime.Remoting.Proxies/: RealProxy.cs
mcs/class/corlib/System.Text/: Latin1Encoding.cs  StringBuilder.cs
mcs/class/corlib/System.Threading/: Thread.cs
mcs/class/referencesource/System.Runtime.Serialization/System/Xml/: XmlStreamNodeWriter.cs
mcs/class/referencesource/System/net/System/: URI.cs  UriExt.cs  UriHelper.cs
mcs/class/referencesource/System/net/System/Net/: IPAddress.cs
mcs/class/referencesource/mscorlib/system/: convert.cs  string.cs
mcs/class/referencesource/mscorlib/system/globalization/: textinfo.cs
mcs/class/referencesource/mscorlib/system/io/: binarywriter.cs
mcs/class/referencesource/mscorlib/system/text/: stringbuilder.cs  utf7encoding.cs
mcs/ilasm/codegen/: MethodDef.cs
mcs/mcs/: cs-parser.jay  expression.cs  mcs.csproj  pending.cs
mcs/tools/gacutil/: driver.cs
mono/: Makefile.am
mono/arch/amd64/: amd64-codegen.h
mono/arch/arm/: arm-vfp-codegen.h  arm-wmmx.h  tramp.cpp
mono/arch/ia64/: codegen.cpp  ia64-codegen.h
mono/arch/mips/: mips-codegen.h
mono/arch/ppc/: ppc-codegen.h
mono/arch/s390x/: Makefile.am  s390x-codegen.h  tramp.cpp
mono/arch/sparc/: sparc-codegen.h
mono/arch/x86/: x86-codegen.h
mono/dis/: Makefile.am  declsec.cpp  declsec.h  dis-cil.cpp  dis-cil.h  dump.cpp  dump.h  get.cpp  get.h  main.cpp  push-pop.h  util.cpp  util.h
mono/io-layer/: Makefile.am  access.h  collection.cpp  context.cpp  context.h  error.cpp  error.h  event-private.h  events.cpp  handles-private.h  handles.cpp  io-layer.h  io-portability.cpp  io-private.h  io.c  io.cpp  io.h  locking.cpp  macros.h  messages.cpp  messages.h  misc-private.h  misc.cpp  mutex-private.h  mutexes.cpp  posix.cpp  process-private.h  processes.c  processes.cpp  security.cpp  semaphore-private.h  semaphores.cpp  shared.cpp  shared.h  socket-private.h  socket-wrappers.h  sockets.cpp  status.h  thread-private.h  timefuncs-private.h  (+12 more)
mono/metadata/: Makefile.am  abi-details.h  appdomain.c  appdomain.cpp  assembly.cpp  attach.c  attach.cpp  attrdefs.h  blob.h  boehm-gc.c  boehm-gc.cpp  cil-coff.h  class-internals.h  class.c  class.cpp  cominterop.c  cominterop.cpp  cominterop.h  console-null.cpp  console-unix.cpp  coree.h  culture-info.h  debug-helpers.cpp  debug-mono-ppdb.cpp  debug-mono-ppdb.h  debug-mono-symfile.cpp  decimal-ms.cpp  decimal-ms.h  domain-internals.h  domain.c  domain.cpp  environment.cpp  exception.cpp  file-io.c  file-io.cpp  file-mmap-posix.cpp  file-mmap.h  filewatcher.cpp  gc-internal.h  gc-internals.h  (+134 more)
mono/mini/: Makefile.am.in  alias-analysis.cpp  aot-compiler.cpp  aot-runtime.cpp  branch-opts.cpp  cfold.cpp  debugger-agent.c  debugger-agent.cpp  decompose.c  decompose.cpp  devirtualization.cs  dominators.cpp  driver.c  driver.cpp  dwarfwriter.cpp  exceptions-amd64.cpp  exceptions-arm.cpp  exceptions-ia64.cpp  exceptions-mips.cpp  exceptions-ppc.cpp  generics.cs  ir-emit.h  method-to-ir.c  mini-amd64.h  mini-exceptions.c  mini-gc.c  mini-runtime.c  mini-trampolines.c  mini-unwind.h  mini-x86.h  mini.c  mini.h  objects.cs  regions.c  simd-intrinsics.c  trace.c  unwind.c
mono/profiler/: Makefile.am  mono-profiler-iomap.c
mono/sgen/: Makefile.am  gc-internal-agnostic.h  sgen-alloc.c  sgen-alloc.cpp  sgen-client.h  sgen-conf.h  sgen-debug.c  sgen-gc.c  sgen-gc.cpp  sgen-gc.h  sgen-gchandles.cpp  sgen-marksweep-drain-gray-stack.h  sgen-marksweep.c  sgen-memory-governor.c  sgen-protocol-def.h  sgen-qsort.cpp  sgen-thread-pool.c
mono/tests/: Makefile.am  generics-sharing.2.cs  interface-default-1.cs  pinvoke2.cs  pinvoke3.cs  resurrection.cs  test-driver
mono/unit-tests/: Makefile.am
mono/utils/: Makefile.am  dlmalloc.c  lock-free-alloc.cpp  memfuncs.h  mono-complex.h  mono-conc-hashtable.c  mono-context.h  mono-counters.c  mono-dl.h  mono-memory-model.h  mono-mmap.h  mono-os-mutex.h  mono-publib.h  mono-threads-mach.c  mono-threads-posix.c  mono-threads.cpp  mono-threads.h  networking-posix.cpp  parse.h  win64.asm
scripts/: update_submodules
tools/crash-bisector/: Program.cs
tools/sgen/: Makefile.am  sgen-grep-binprot.c  sgen-grep-binprot.cpp
(+1 files in other folders)
